// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Status Button matches snapshot for own when active 1`] = `
<div>
  <button
    aria-label="States.Own"
    class="button"
    role="button"
    tabindex="0"
  >
    <i
      class="bi bi-box-seam-fill"
    />
  </button>
</div>
`;

exports[`Status Button matches snapshot for own when not active 1`] = `
<div>
  <button
    aria-label="States.Own"
    class="button"
    role="button"
    tabindex="0"
  >
    <i
      class="bi bi-box-seam-fill"
    />
  </button>
</div>
`;

exports[`Status Button matches snapshot for wanttoplay when active 1`] = `
<div>
  <button
    aria-label="States.WantToPlay"
    class="button"
    role="button"
    tabindex="0"
  >
    <i
      class="bi bi-dice-3-fill"
    />
  </button>
</div>
`;

exports[`Status Button matches snapshot for wanttoplay when not active 1`] = `
<div>
  <button
    aria-label="States.WantToPlay"
    class="button"
    role="button"
    tabindex="0"
  >
    <i
      class="bi bi-dice-3-fill"
    />
  </button>
</div>
`;

exports[`Status Button matches snapshot for wishlist when active 1`] = `
<div>
  <button
    aria-label="States.Wishlist"
    class="button"
    role="button"
    tabindex="0"
  >
    <i
      class="bi bi-gift-fill"
    />
  </button>
</div>
`;

exports[`Status Button matches snapshot for wishlist when not active 1`] = `
<div>
  <button
    aria-label="States.Wishlist"
    class="button"
    role="button"
    tabindex="0"
  >
    <i
      class="bi bi-gift-fill"
    />
  </button>
</div>
`;

exports[`Status Button matches snapshot when loading 1`] = `
<div>
  <div
    class="spinner spinner-border spinner-border-sm"
  />
</div>
`;

exports[`Status Button passes class names to container 1`] = `
<div>
  <button
    aria-label="States.Own"
    class="button passed class names"
    role="button"
    tabindex="0"
  >
    <i
      class="bi bi-box-seam-fill"
    />
  </button>
</div>
`;

exports[`Status Button passes styles to container 1`] = `
<div>
  <button
    aria-label="States.Own"
    class="button"
    role="button"
    style="width: 100%; align-self: end; margin-block-start: 1em;"
    tabindex="0"
  >
    <i
      class="bi bi-box-seam-fill"
    />
  </button>
</div>
`;
